force-app/main/default/objects/Meal_Item__c/Meal_Item__c.object-meta.xml
<CustomObject>
    <label>Meal Item</label>
    <nameField>
        <displayFormat>MI-{00000000}</displayFormat>
        <label>Meal Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meal Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>