force-app/main/default/objects/Meal_Item__c/fields/Daily_Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Daily_Record_Date__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; Meal_Log__r.Daily_Record_Log__c,
  LPAD(TEXT(DAY(Meal_Log__r.Daily_Record_Log__r.Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp;
  LPAD(TEXT(MONTH(Meal_Log__r.Daily_Record_Log__r.Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp;
  TEXT(YEAR(Meal_Log__r.Daily_Record_Log__r.Date__c))
)</formula>
    <label>Daily Record Date</label>
    <type>Text</type>
</CustomField>