force-app/main/default/objects/Meal_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>