force-app/main/default/objects/Meal_Item__c/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Food</label>
    <referenceTo>Food_Reference__c</referenceTo>
    <relationshipLabel>Meal Item</relationshipLabel>
    <relationshipName>Meal_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>