force-app/main/default/objects/Meal_Item__c/fields/Meal_Log__c.field-meta.xml
<CustomField>
    <fullName>Meal_Log__c</fullName>
    <label>Meal Log</label>
    <referenceTo>Meal_Log__c</referenceTo>
    <relationshipLabel>Meal Item</relationshipLabel>
    <relationshipName>Meal_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>