force-app/main/default/objects/Meal_Item__c/fields/Number_of_Servings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Servings__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Servings</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>