force-app/main/default/objects/Meal_Item__c/fields/Serving_Size__c.field-meta.xml
<CustomField>
    <fullName>Serving_Size__c</fullName>
    <label>Serving Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>